tests/parser/rparen_expected.expected
<string>:1:11: error: expected RParen, not IntLiteral
( 43 + 42 11 )
          ^^