tests/parser/rparen_expected.nx
fun main() {
    ( 43 + 42 11 )
}
